--- a/App.Core/App.Core.csproj
+++ b/App.Core/App.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\App.Entities\App.Entities.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.21" />
   </ItemGroup>
 
 </Project>
